[package]
name = "pdb-handler-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
pdb-handler = "0.2"
regex = "1.11"
pdbtbx = "0.12"

[profile.release]
opt-level = "s"
